--- a/study-web Maven Webapp/pom.xml
+++ b/study-web Maven Webapp/pom.xml
@@ -13,10 +13,15 @@
   <packaging>war</packaging>
   
   <dependencies>
-  	<dependency>
+  	<!-- <dependency>
   		<groupId>com.yixin</groupId>
 	    <artifactId>study-service</artifactId>
 	    <version>0.0.1-SNAPSHOT</version>
+  	</dependency> -->
+  	<dependency>
+  		<groupId>com.yixin</groupId>
+  		<artifactId>study-model</artifactId>
+  		<version>0.0.1-SNAPSHOT</version>
   	</dependency>
   </dependencies>
   
