--- a/study-web Maven Webapp/pom.xml
+++ b/study-web Maven Webapp/pom.xml
@@ -18,6 +18,11 @@
 	    <artifactId>study-service</artifactId>
 	    <version>0.0.1-SNAPSHOT</version>
   	</dependency>
+  	<dependency>
+  		<groupId>com.yixin</groupId>
+  		<artifactId>study-model</artifactId>
+  		<version>0.0.1-SNAPSHOT</version>
+  	</dependency>
   </dependencies>
   
   
