--- a/pom.xml
+++ b/pom.xml
@@ -37,7 +37,25 @@
 			</properties>
 		</profile>
 	</profiles>
-  <dependencies>
+		 <dependencies>
+		 <!-- 我当时就是少了jackson-datatype-jsr310  jackson-core  jackson-mapper-asl   几个 包导致 一直415 -->
+			<dependency>
+				<groupId>com.fasterxml.jackson.datatype</groupId>
+				<artifactId>jackson-datatype-jsr310</artifactId>
+				<version>2.9.0</version>
+			</dependency>
+		  	<dependency>
+		    <groupId>com.fasterxml.jackson.core</groupId>
+		    <artifactId>jackson-core</artifactId>
+		    <version>2.9.0</version>
+		</dependency>
+  		<dependency>  
+		        <groupId>org.codehaus.jackson</groupId>  
+		        <artifactId>jackson-mapper-asl</artifactId>  
+		        <version>1.9.8</version>  
+		        <type>jar</type>  
+		        <scope>compile</scope>  
+		 </dependency>  
   <!-- sharding-jdbc 包必须升级到1.5.4版本。1.3.3有问题报druid有一个类找不到 -->
   		<!-- sharding-jdbc -->
         <dependency>  
